--- a/styles.css
+++ b/styles.css
@@ -1,119 +1,58 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Big+Shoulders+Display&display=swap');
-
+/* Basic styling */
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-img {
-	width: 200px;
-	margin: 20px;
-}
+/* Intro section */
 
-div {
-	margin: auto;
+section:nth-child(1) {
 	display: flex;
-	max-width: fit-content;
-}
-
-.clip-container {
-	height: 250px;
-}
-
-.clip-cross {
-	filter: hue-rotate(10deg);
-	transition: 0.4s cubic-bezier(1, -1, 0, 2);
-	clip-path: polygon(
-		20% 0%,
-		0 0,
-		0 50%,
-		0% 80%,
-		0 100%,
-		51% 100%,
-		100% 100%,
-		100% 80%,
-		100% 49%,
-		100% 0,
-		80% 0%,
-		49% 0
-	);
-}
-
-.clip-cross:hover {
-	clip-path: polygon(
-		20% 0%,
-		0% 20%,
-		30% 50%,
-		0% 80%,
-		20% 100%,
-		50% 70%,
-		80% 100%,
-		100% 80%,
-		70% 50%,
-		100% 20%,
-		80% 0%,
-		50% 30%
-	);
-}
-
-.clip-parallelogram {
-	transition: clip-path 0.3s ease-in-out;
-	clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-}
-
-.clip-parallelogram:hover {
-	clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-}
-
-.clip-arrow {
-	transition: clip-path 0.3s ease-in-out;
-	clip-path: polygon(
-		0% 20%,
-		60% 20%,
-		60% 0%,
-		100% 50%,
-		60% 100%,
-		60% 80%,
-		0% 80%
-	);
-}
-
-.clip-arrow:hover {
-	clip-path: polygon(
-		40% 0%,
-		40% 20%,
-		100% 20%,
-		100% 80%,
-		40% 80%,
-		40% 100%,
-		0% 50%
-	);
-}
-
-header {
-	display: flex;
+	width: 100%;
+	height: 50em;
 	justify-content: center;
-	align-items: flex-start;
-	width: 680px;
-	height: 426px;
-	background-size: cover;
-	background-image: url('images/image4.jpg');
-	background-color: red;
-	background-blend-mode: luminosity;
-	margin: auto;
+	align-items: center;
 }
 
-h1 {
+section span:first-child {
+	position: relative;
+	width: 30em;
+	height: 30em;
+	border-radius: 50%;
+	background-color: red;
+	display: block;
+	animation: clipRotate 15s infinite;
+	animation-delay: 1s;
+}
+
+section span:first-child::before {
+	content: '';
+	width: 5em;
+	height: 32em;
+	background-color: black;
+	clip-path: polygon(84% 100%, 54% 100%, 56% 0%, 60% 0);
 	position: absolute;
-	top: 120px;
-	left: 450px;
-	font-family: 'Big Shoulders Display', cursive;
-	font-size: 90px;
-	color: black;
-	padding: 0;
-	margin: 0;
-	mix-blend-mode: luminosity;
-	opacity: 0.5;
+	left: 320px;
+	transform: rotate(-5deg);
+}
+
+section span:first-child::after {
+	content: '';
+	width: 5em;
+	height: 32em;
+	background-color: black;
+	clip-path: polygon(84% 100%, 54% 100%, 56% 0%, 60% 0);
+	position: absolute;
+	left: 280px;
+	transform: rotate(5deg);
+}
+
+@keyframes clipRotate {
+	50% {
+		transform: rotate(30deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
 }
