--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 /* Font imports */
+
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Yatra+One&display=swap');
 
 /* Basic styling */
+
 * {
 	margin: 0;
 	padding: 0;
@@ -24,14 +26,27 @@ main section:nth-child(2) {
 }
 
 /* Header */
+
+header {
+	display: flex;
+	justify-content: center;
+}
+
 header h1 {
 	font-family: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', Osaka,
 		'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
 	font-size: 80px;
 	text-align: center;
+	position: absolute;
+	top: 40px;
+}
+
+header {
+	background: rgba(114, 179, 255, 1);
 }
 
 /* Mountain */
+
 section:nth-child(1) {
 	background: rgb(114, 179, 255);
 	background: linear-gradient(
@@ -49,7 +64,7 @@ section:nth-child(1) span:nth-child(2) {
 	border-left: 700px solid transparent;
 	border-right: 700px solid transparent;
 	border-bottom: 550px solid black;
-	filter: opacity(80%);
+	filter: opacity(100%);
 }
 
 section:nth-child(1) span:nth-child(2)::after {
@@ -102,6 +117,7 @@ section:nth-child(1) span:nth-child(3)::before {
 }
 
 /* Sun */
+
 main > section:nth-child(1) {
 	width: 100%;
 	height: 50em;
@@ -123,57 +139,7 @@ section span:first-child {
 	animation-delay: 1s;
 	filter: hue-rotate(20deg);
 }
-
-/* Card component */
-article section:nth-child(1) {
-	display: inline-block;
-	background-image: radial-gradient(circle 360px, red 20%, transparent 20%),
-		repeating-conic-gradient(
-			red 30deg,
-			white 30deg,
-			white 40deg,
-			red 40deg,
-			red 50deg
-		);
-	filter: hue-rotate(20deg);
-}
-
-h2 {
-	border: 1px solid black;
-	border-bottom: none;
-	width: 433px;
-	text-align: center;
-	padding: 2em;
-	font-family: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', Osaka,
-		'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
-	font-size: 32px;
-}
-
-table {
-	border-collapse: collapse;
-	border: 1px solid black;
-}
-
-td {
-	border-bottom: 1px solid black;
-	padding: 1em 0.5em 1em 0.5em;
-}
-
-tr td:nth-child(3) {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 13px;
-}
-
-/* Circle animation */
-@keyframes clipRotate {
-	50% {
-		transform: rotate(30deg);
-	}
-	100% {
-		transform: rotate(0deg);
-	}
-}
-
+/* Animations */
 @keyframes cloud {
 	0% {
 		left: 50px;
