--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,6 @@ body {
 	justify-content: center;
 }
 
-:root {
-	--white: #ffffff;
-}
-
-main section:nth-child(2) {
-	margin: 3em;
-}
-
 /* Header */
 
 header {
@@ -39,22 +31,16 @@ header h1 {
 	text-align: center;
 	position: absolute;
 	top: 40px;
-}
-
-header {
-	background: rgba(114, 179, 255, 1);
+	animation: textSlideIn 3s linear forwards;
+	animation-delay: 3s;
+	overflow: hidden;
+	height: 1.3em;
+	width: 0;
 }
 
 /* Mountain */
-
 section:nth-child(1) {
-	background: rgb(114, 179, 255);
-	background: linear-gradient(
-		180deg,
-		rgba(114, 179, 255, 1) 16%,
-		rgba(140, 194, 250, 1) 47%,
-		rgba(250, 250, 250, 1) 99%
-	);
+	background: linear-gradient(180deg, red 26%, red 27%, black 120%);
 }
 
 section:nth-child(1) span:nth-child(2) {
@@ -87,10 +73,11 @@ section:nth-child(1) span:nth-child(3) {
 	left: 50px;
 	width: 300px;
 	height: 100px;
-	background: #eceff1;
+	background: black;
+	filter: invert(1);
 	border-radius: 100px;
 	animation: cloud 2s ease-in infinite alternate;
-	animation-delay: 3s;
+	animation-delay: 1s;
 }
 
 section:nth-child(1) span:nth-child(3)::after,
@@ -127,7 +114,7 @@ main > section:nth-child(1) {
 
 section span:first-child {
 	position: absolute;
-	top: 700px;
+	top: 600px;
 	left: 850px;
 	width: 12em;
 	height: 12em;
@@ -137,9 +124,260 @@ section span:first-child {
 	animation: sunRising 3s linear;
 	animation-fill-mode: forwards;
 	animation-delay: 1s;
-	filter: hue-rotate(20deg);
+	filter: saturate(80%);
 }
+
+/* Menu */
+main section:nth-child(2) {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-left: 8em;
+	margin-top: 3em;
+	font-family: 'Montserrat', sans-serif;
+}
+
+main section:nth-child(3) {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	margin-left: 8em;
+	font-family: 'Montserrat', sans-serif;
+}
+
+main section:nth-child(4) {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	margin-left: 8em;
+	font-family: 'Montserrat', sans-serif;
+}
+
+main section:nth-child(5) {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	margin-left: 8em;
+	font-family: 'Montserrat', sans-serif;
+}
+
+/* Ramen noodles */
+main section:nth-child(2) span {
+	display: inline-block;
+	width: 250px;
+	height: 20px;
+	position: relative;
+	bottom: 60px;
+	animation: wavy 1.5s linear infinite;
+	animation-direction: alternate;
+}
+
+main section:nth-child(2) span:before {
+	content: 'loaderloaderloaderloaderloa';
+	text-decoration-line: underline;
+	text-decoration-style: wavy;
+	text-decoration-color: red;
+	text-decoration-thickness: 3px;
+	line-height: 0;
+	word-spacing: 352px;
+	color: transparent;
+}
+
+main section:nth-child(3) span {
+	display: inline-block;
+	width: 250px;
+	height: 20px;
+	position: relative;
+	bottom: 60px;
+}
+
+main section:nth-child(3) span:before {
+	content: 'loaderloaderloaderloaderloa';
+	text-decoration-line: underline;
+	text-decoration-style: wavy;
+	text-decoration-color: red;
+	text-decoration-thickness: 3px;
+	line-height: 0;
+	word-spacing: 352px;
+	color: transparent;
+}
+
+main section:nth-child(4) span {
+	display: inline-block;
+	width: 250px;
+	height: 20px;
+	position: relative;
+	bottom: 60px;
+	animation: wavy 1.5s linear infinite;
+	animation-direction: alternate;
+}
+
+main section:nth-child(4) span:before {
+	content: 'loaderloaderloaderloaderloa';
+	text-decoration-line: underline;
+	text-decoration-style: wavy;
+	text-decoration-color: red;
+	text-decoration-thickness: 3px;
+	line-height: 0;
+	word-spacing: 352px;
+	color: transparent;
+}
+
+main section:nth-child(5) span {
+	display: inline-block;
+	width: 250px;
+	height: 20px;
+	position: relative;
+	bottom: 60px;
+}
+
+main section:nth-child(5) span:before {
+	content: 'loaderloaderloaderloaderloa';
+	text-decoration-line: underline;
+	text-decoration-style: wavy;
+	text-decoration-color: red;
+	text-decoration-thickness: 3px;
+	line-height: 0;
+	word-spacing: 352px;
+	color: transparent;
+}
+
+/* Ramen */
+main section:nth-child(2) > article {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1.5em;
+	width: 30em;
+}
+
+main section:nth-child(2) > article div {
+	font-size: 1.3em;
+	width: 50px;
+	margin-left: 2em;
+}
+
+main section:nth-child(2) article p {
+	max-width: 200px;
+}
+
+main section:nth-child(2) > article h3 {
+	width: 50%;
+	font-size: 1.3em;
+}
+
+main section:nth-child(2) h1 {
+	margin-bottom: 1em;
+	align-self: center;
+	margin-left: 4em;
+	margin-right: 20.5em;
+	color: red;
+}
+
+/* Toppings */
+
+main section:nth-child(3) > article {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1.5em;
+	width: 30em;
+}
+
+main section:nth-child(3) > article div {
+	font-size: 1.3em;
+	width: 50px;
+	margin-left: 2em;
+}
+
+main section:nth-child(3) article p {
+	max-width: 200px;
+}
+
+main section:nth-child(3) > article h3 {
+	width: 50%;
+	font-size: 1.3em;
+}
+
+main section:nth-child(3) h1 {
+	margin-bottom: 1em;
+	align-self: center;
+	margin-right: 16em;
+	color: red;
+}
+
+/* Side dishes */
+
+main section:nth-child(4) > article {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1.5em;
+	width: 30em;
+}
+
+main section:nth-child(4) > article div {
+	font-size: 1.3em;
+	width: 50px;
+	margin-left: 2em;
+}
+
+main section:nth-child(4) article p {
+	max-width: 200px;
+}
+
+main section:nth-child(4) > article h3 {
+	width: 50%;
+	font-size: 1.3em;
+}
+
+main section:nth-child(4) h1 {
+	margin-bottom: 1em;
+	align-self: center;
+	margin-left: 4em;
+	margin-right: 21.5em;
+	color: red;
+}
+
+/* Drinks */
+
+main section:nth-child(5) > article {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1.5em;
+	width: 30em;
+}
+
+main section:nth-child(5) > article div {
+	font-size: 1.3em;
+	width: 50px;
+	margin-left: 2em;
+}
+
+main section:nth-child(5) article p {
+	max-width: 200px;
+}
+
+main section:nth-child(5) > article h3 {
+	width: 50%;
+	font-size: 1.3em;
+}
+
+main section:nth-child(5) h1 {
+	margin-bottom: 1em;
+	align-self: center;
+	margin-left: 4em;
+	margin-right: 21.5em;
+	color: red;
+}
+
 /* Animations */
+@keyframes textSlideIn {
+	from {
+		width: 0em;
+	}
+	to {
+		width: 10em;
+	}
+}
+
 @keyframes cloud {
 	0% {
 		left: 50px;
@@ -154,6 +392,15 @@ section span:first-child {
 		bottom: 0%;
 	}
 	100% {
-		top: 30%;
+		top: 170px;
+	}
+}
+
+@keyframes wavy {
+	0% {
+		left: 0;
+	}
+	100% {
+		left: -10px;
 	}
 }
