--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ section > span:first-child::after {
 /* Contexts */
 
 @media print {
-	header {
+	nav {
 		display: none;
 	}
 
@@ -252,9 +252,16 @@ section > span:first-child::after {
 		margin: 0mm;
 	}
 
-	body > section:first-of-type {
+	header > section:first-of-type {
 		height: 100vh;
 		page-break-after: always;
+	}
+
+	header > section:first-of-type span:nth-child(1) {
+		display: block;
+		position: absolute;
+		bottom: 30vw;
+		left: 55vw;
 	}
 }
 
